Fix align center cover title

--- a/src/styles/Concepts.css
+++ b/src/styles/Concepts.css
@@ -301,6 +301,7 @@
 .cover-title {
   margin-bottom: 13px;
   margin-top: 0px;
+  text-align: center;
 }
 
 .cover-description {
